<resources>
    <string name="app_name">MyApp2</string>
    <string name="setting1">login</string>
    <string name="setting2">about</string>
    <string name="setting3">exit</string>
    <string name="addButton">addButton</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item1">new node</string>
    <string name="item2">Text</string>
    <string name="item3">Form</string>
    <string name="item4">Color</string>
    <string name="item5">Delete</string>

</resources>
